shiny/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: funathon2024-sujet2-deployment
  labels:
    app: funathon2024-sujet2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: funathon2024-sujet2
  template:
    metadata:
      labels:
        app: funathon2024-sujet2
    spec:
      containers:
      - name: funathon2024-sujet2
        image: rwinsee/funathon2024:shiny-test2
        imagePullPolicy: Always
        ports:
        - containerPort: 3838
